<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MyProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardBackgroundColor="@color/light_blue"
        app:cardCornerRadius="2dp"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/my_profile_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            app:civ_border_color="@color/white"
            app:civ_border_width="1dp"
            android:contentDescription="@string/image_text"
            android:src="@drawable/ic_baseline_person_24"
            app:civ_circle_background_color="@color/grey"
            android:focusableInTouchMode="true"
            android:focusable="true"
            />
    </androidx.cardview.widget.CardView>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etProfileName"
        android:hint="@string/name_text"
        android:textColorHint="@color/light_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_email"
        android:hint="@string/email_text"
        android:textColorHint="@color/light_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:focusable="false"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_text"
        android:layout_gravity="center"
        android:backgroundTint="@color/light_blue"
        android:textColor="@color/white"
        />

</LinearLayout>